[package]
name = "tokio-actor"
version = "0.1.0"
authors = ["ttang <atory_cc>"]
edition = "2018"
default-run = "tokio-actor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
futures-util = "0.3.13"
reqwest = "0.11.1"
tokio = {version = "1.2.0", features = ["full"] }
tungstenite = "0.13.0"
